--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://sanky20.github.io/shopping-website",
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
@@ -8,9 +7,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
+
   },
   "dependencies": {
     "phosphor-react": "^1.4.1",
